		What has changed in GDB?
	     (Organized release by release)

*** Changes since GDB 13

* New commands

maint jit dump
  Dump an in-memory JIT object into a file.

set|show scheduler-locking-eval (on|off)
  The new setting allows a user to lock scheduler during inferior calls.
  It can be set in parallel to scheduler-locking step or replay mode.

info devices
  Show additional information about inferiors which are considered
  devices by GDB.  For devices, the description displayed by 'info
  inferiors' has been changed.  The new description displays them as a
  'device' together with their PCI slot and sub-device ID.  This allows
  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

* Add convenience variable `$_simd_lane`.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.  If a thread is stopped at a breakpoint, add
     'hit-lanes-mask' to its output.  The mask encodes for which lanes
     the breakpoint condition was evaluated to true.

*** Changes in GDB 13
